# doctorIO

./: .babelrc  .eslintrc.js  .eslintrc.json  .gitignore  .stylelintrc  .todo  README.md  boilerplates.config.js  components-boilerplate.js  package-lock.json  package.json  postcss.config.js  snowpack.config.js  ss.js  ss.ts  test.js  test.ts  tsconfig.json  webpack.config.js
.github/workflows/: azure-static-web-apps-kind-pond-0752d4203.yml  codeql.yml
.storybook/: main.js  preview-body.html  preview-head.html  preview.js
@types/: global.d.ts
electron-config/: env.config.js  forge.config.js  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js
electron-forge-webpack/: package-lock.json  package.json  tsconfig.json
electron-forge-webpack/src/: WebpackPlugin.ts  index.ts
experimental/: red.js  test.js
experimental/transform-first/: index.js  package.json
experimental/transform-second/: index.js  package-lock.json  package.json
public/: index.html
src/: App.scss  App.tsx  index.scss  index.tsx  redux-logger.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/styles/: _appColors.scss  color.ts
src/components/AppMenu/: AppMenu.tsx  index.ts
src/components/QueueItem/: QueueItem.stories.tsx  QueueItem.tsx  index.ts
src/components/SideMenu/: SideMenu.tsx  index.ts
src/data/: iconfig.ts  menuSvgs.ts
src/main/: index.ts  preload.ts
src/renderer/: App.scss  App.tsx  index.scss  index.tsx
static/: comp.css  holdingScroll.js  index.html  index.js  main.css
(+1656 files in other folders)
